--- a/404.html
+++ b/404.html
@@ -9,10 +9,10 @@
 <body bgcolor="black">
 
     <title>DirtyElectro - Error</title>
-    <link rel="stylesheet" href="../topnav/topnav.css">
-    <link rel="stylesheet" href="../topnav/copyright.css">
-    <link rel="stylesheet" href="../font/font.css">
-    <link rel="stylesheet" href="../font/font_ttf.css">
+    <link rel="stylesheet" href="topnav/topnav.css">
+    <link rel="stylesheet" href="topnav/copyright.css">
+    <link rel="stylesheet" href="font/font.css">
+    <link rel="stylesheet" href="font/font_ttf.css">
 
     <style>
         .error {
@@ -212,7 +212,7 @@
     <body>
         <nav id="topnav">
             <a id="logo" class="nav-link" href="#">Dirty&nbsp;Electro</a>
-            <a id="about" class="contact" href="../about.html">Contact&nbsp;US</a>
+            <a id="about" class="contact" href="about.html">Contact&nbsp;US</a>
         </nav>
 
         <div>
