--- a/404.html
+++ b/404.html
@@ -1,3 +1,8 @@
+---
+
+permalink: /404.html
+
+---
 <!DOCTYPE html>
 <html lang="en">
 <html lang="en" onselectstart="return false"> <!-- 禁止选中文字 CAN NOT COPY-->
