--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <input type=" password" onKeyUp="value=value.replace(/[^\d|chun]/g,'')" maxlength="12" placeholder="Password"
                 class="password">
 
-            <a class="login" href="public/main.html">Login</a>
+            <a class="login" href="main.html">Login</a>
 
             <p class="copyright">H-estrella All rights reserved &copy; 2022</p>
 
