--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@ permalink: /404.html
 
             transform: translate(-50%, -50%);
 
-            font-size: xx-large;
+            font-size: 27px;
             color: orange;
             text-align: center;
             font-family: Dirtyelectro;
@@ -40,7 +40,7 @@ permalink: /404.html
 
             transform: translate(-50%, -50%);
 
-            font-size: 300%;
+            font-size: 80px;
             font-family: 'Noto Sans SC', sans-serif;/* 正常体 粗体 简体中文 */
         }
 
@@ -217,7 +217,7 @@ permalink: /404.html
     <body>
         <nav id="topnav">
             <a id="logo" class="nav-link" href="#">Dirty&nbsp;Electro</a>
-            <a id="about" class="contact" href="about.html">Contact&nbsp;US</a>
+            <a id="about" class="contact" href="../about.html">Contact&nbsp;US</a>
         </nav>
 
         <div>
