--- a/404.html
+++ b/404.html
@@ -217,7 +217,7 @@ permalink: /404.html
     <body>
         <nav id="topnav">
             <a id="logo" class="nav-link" href="#">Dirty&nbsp;Electro</a>
-            <a id="about" class="contact" href="about.html">Contact&nbsp;US</a>
+            <a id="about" class="contact" href="https://wcxe.github.io/a/about.html">Contact&nbsp;US</a>
         </nav>
 
         <div>
